<resources>
    <string name="app_name">GestionPermisos001</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="selec_galeria">Selecciona archivo desde la Galería interna</string>
    <string name="selec_www">Selecciona archivo desde Internet</string>
    <string name="selec_sd">Selecciona archivo desde la Tarjeta SD</string>
    <string name="selec_recurso">Selecciona archivo desde Recursos</string>
    <string name="imagen">Imagen</string>
    <string name="video">Video</string>
    <string name="sonido">Sonido</string>
    <string name="genial">Genial !</string>
    <string name="volver">Volver</string>
    <string name="lista_contactos">Lista de contactos</string>
    <string name="acerca_de">Acerca de...</string>
    <string name="salir">Salir</string>
    <string name="llamar">Llamar</string>
    <string name="colgar">Colgar</string>
    <string name="nombre">Nombre</string>
    <string name="telefono">Teléfono</string>
    <string name="selec_galeria_land">Galería</string>
    <string name="selec_www_land">Internet</string>
    <string name="selec_sd_land">Tarjeta SD</string>
    <string name="selec_recurso_land">Recursos</string>
    <string name="selec_origen_land">Selecciona:</string>
</resources>