<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentOrigen"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center">

        <Button
            style="@style/estilo_textos_boton"
            android:id="@+id/btnGaleria"
            android:text="@string/selec_galeria"/>

        <Button
            style="@style/estilo_textos_boton"
            android:id="@+id/btnWWW"
            android:text="@string/selec_www" />

        <Button
            style="@style/estilo_textos_boton"
            android:id="@+id/btnRecursos"
            android:text="@string/selec_recurso"/>
    </LinearLayout>
</FrameLayout>