<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActividadContactos"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/fondo_aluminio">

    <TextView
        style="@style/estilo_textos_boton"
        android:textColor="@color/color_fondo"
        android:text="@string/lista_contactos"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

    <FrameLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/forma_redondeada_apagada">
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:id="@+id/lvContactos"
            android:layout_margin="10dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
    </FrameLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnContactosVolver"
            android:text="@string/volver"/>

        <Space
            android:layout_width="100dp"
            android:layout_height="wrap_content"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnContactosSalir"
            android:text="@string/salir"/>

    </LinearLayout>

</LinearLayout>